Center align subtitle-one text

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
 }
 
 .subtitle-one {
-  text-align: left;
+  text-align: center;
   font-size: 0.9rem;
   color: #767676;
   position: absolute;
